--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~46.0.7",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "^5.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
