--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/bungee-outline": "^0.2.2",
+    "@expo-google-fonts/pacifico": "^0.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "expo": "~46.0.7",
+    "expo-app-loading": "^2.1.0",
+    "expo-font": "^10.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "lottie-react-native": "^5.1.4",
