--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/pacifico": "^0.2.2",
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.5",
@@ -29,6 +30,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-config": "^1.4.6",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-swipe-list-view": "^3.2.9",
