--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/pacifico": "^0.2.2",
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@expo-google-fonts/russo-one": "^0.2.2",
     "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
